--- a/views/game.mustache
+++ b/views/game.mustache
@@ -20,13 +20,14 @@
         <input class="inputbar" type"text" name="letter" placeholder="Da guess goes hur"/>
         <button type="submit">Guess NOW!</button>
     </form>
-    <p> Your Letters: {{guess}}</p>
-    <p>Wrong Letters: {{wrong_guess}}</p>
+    <p>Correct Letters: {{guess}}</p>
+    <p>Incorrect Letters: {{wrong_guess}}</p>
     </div>
     <video width="100%" height="100%" controls loop autoplay>
      <source src="vid.mov" type="video/mp4">
  
 
   </video>
+  <div class="light-1" style="background-color:{{color}}"></div>
   </body>
 </html>
