--- a/public/styles.css
+++ b/public/styles.css
@@ -21,13 +21,23 @@ body {
 video {
     z-index:2;
 }
-.light-1 {
-    background-color:green;
-    border-radius: 50%;
-    height:100px;
-    width:100px;
+
+.light {
+  display: block;
+  background:green;
+  border-radius: 100%;
+  height: 100px;
+  width: 100px;
+  margin-left:10px;
+  margin-right:10px;
+  opacity: .5;
+  animation-delay: 2s;
+ 
+}
+.light-holder {
+    display:flex;
     position:absolute;
-    top:60%;
+    top:10%;
     left:20%;
 }
 
@@ -54,15 +64,15 @@ a:hover {
 }
 .restart {
     left: -120%;
-    top: 30%;
+    top: 38%;
     animation: blinker 1s linear infinite;
 }
 .error-style {
-        position: ABSOLUTE;
+    position: ABSOLUTE;
     color: red;
-    top: 45%;
+    top: 36%;
     left: -5%;
-    animation: blinker .5s linear infinite;
+    animation: blinker 1s linear infinite;
     width:400px;
 }
 .win {
